# qr-shield

./: .gitignore  README.md
Doc/: 1- Registro de Proyecto.md  1. A6 NovaTools (Moran Vera Mickaell).md  2- Anteproyecto Moran Vera Mickaell.md  2. A6 NovaTools (Moran Vera Mickaell).md  3- Presentacion Proyecto.md  3. A6 NovaTools (Moran Vera Mickaell).md  4- Acta de Constitucion Moran Vera Mickaell.md  4. A6 NovaTools (Moran Vera Mickaell) Acta de Constitucion.md  5- Matriz de requerimientos Moran Vera Mickaell.md  5. A6 NovaTools (Moran Vera Mickaell) Acta de Constitucion.md  6- EDT_NovaTools.md  6. A6 NovaTools (Moran Vera Mickaell) Anteproyecto.md  7- Cronograma de Actividades - Moran Vera Mickaell.md  7. A6 NovaTools (Moran Vera Mickaell) Anteproyecto.md  8- Fases - Moran Vera Mickaell.md  8. A6 NovaTools (Moran Vera Mickaell) Cronograma.md  Resumido.md
motor/: .env.example  README.md  pyproject.toml
motor/app/: main.py
motor/app/api/v1/: analyze.py
motor/app/detectors/: l1_heuristics.py
motor/tests/: test_analyze.py  test_health.py  test_l1_heuristics.py
